Add Database Config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,15 @@ spring.mail.properties.mail.transport.protocol=smtp
 
 
 #Config DB connection
-#spring.datasource.url = jdbc:postgresql://localhost:5432/dbname
-#spring.datasource.username = username
-#spring.datasource.password = passed
-#spring.jpa.hibernate.ddl-auto = none
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url = ${JDBC_DATABASE_URL:}
+spring.datasource.username = ${JDBC_DATABASE_USERNAME:}
+spring.datasource.password = ${JDBC_DATABASE_PASSWORD:}
+spring.jpa.hibernate.ddl-auto = ${SPRING_JPA_HIBERNATE_DLL_AUTO:}
+spring.jpa.show-sql = ${SPRING_JPA_SHOW_SQL}
+spring.jpa.hibernate.format_sql = ${SPRING_JPA_HIBERNATE_FORMAT_SQL:}
+spring.jpa.properties.hibernate.dialect = ${SPRING_JPA_HIBERNATE_DIALECT:}
 
 #Config Loggin
-logging.file=mylog.log
+logging.file.name=mylog.log
 logging.file.path=../logs
 
