set up login, register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,18 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 
 
-#Config DB connection
-#spring.datasource.url = jdbc:postgresql://localhost:5432/dbname
-#spring.datasource.username = username
-#spring.datasource.password = passed
-#spring.jpa.hibernate.ddl-auto = none
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-#Config Loggin
-logging.file=mylog.log
+#Config DB connection
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = Minhtrung1772k1
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+
+
+#Config Logg
+logging.file.name=mylog.log
 logging.file.path=../logs
+
 
