--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>42.3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.8</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
