--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fuswp391@gmail.com
-spring.mail.password=@Fuhcmswp391
+spring.mail.password=drwojmnisqozyhab
 spring.mail.debug=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
