--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.mail.properties.mail.transport.protocol=smtp
 #spring.jpa.open-in-view=false
 
 #Config DB local host
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/swp
 spring.datasource.username = phamhagiang
 spring.datasource.password = 123456789
 spring.jpa.hibernate.ddl-auto = none
