Filter By Location implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.mail.properties.mail.transport.protocol=smtp
 #spring.jpa.open-in-view=false
 
 #Config DB local host
-spring.datasource.url = jdbc:postgresql://localhost:5432/swp
-spring.datasource.username = phamhagiang
-spring.datasource.password = 123456789
+spring.datasource.url = jdbc:postgresql://localhost:5432/Yard_Main
+spring.datasource.username = postgres
+spring.datasource.password = 1
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
