--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.mail.properties.mail.transport.protocol=smtp
 #spring.jpa.open-in-view=false
 
 #Config DB local host Tan
-spring.datasource.url = jdbc:postgresql://localhost:5432/Yard_Main
+spring.datasource.url = jdbc:postgresql://localhost:5432/Yard
 spring.datasource.username = postgres
 spring.datasource.password = 1
 spring.jpa.hibernate.ddl-auto = none
