Fix bug server error when query slot from invalid subYardId

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,20 +17,20 @@ spring.mail.properties.mail.transport.protocol=smtp
 #spring.jpa.open-in-view=false
 
 #Config DB local host
-#spring.datasource.url = jdbc:postgresql://localhost:5432/swp
-#spring.datasource.username = phamhagiang
-#spring.datasource.password = 123456789
-#spring.jpa.hibernate.ddl-auto = none
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.open-in-view=false
-
-#Config DB local host Tan
-spring.datasource.url = jdbc:postgresql://localhost:5432/Yard
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
-spring.datasource.password = 1
+spring.datasource.password = 123456789
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.open-in-view = false
+spring.jpa.open-in-view=false
+
+#Config DB local host Tan
+#spring.datasource.url = jdbc:postgresql://localhost:5432/Yard
+#spring.datasource.username = postgres
+#spring.datasource.password = 1
+#spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.open-in-view = false
 
 
 spring.servlet.multipart.max-file-size=10MB
