--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.mail.debug=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
+#spring.mail.properties.mail.smtp.allow8bitmime=true
+#spring.mail.properties.mail.smtps.allow8bitmime=true
 #Config DB connection
 #spring.datasource.url=jdbc:postgresql://ec2-34-207-12-160.compute-1.amazonaws.com:5432/d2o40isifqluhf
 #spring.datasource.username=jehxccymanmrbw
