--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.open-in-view=false
 #spring.jpa.open-in-view = false
 
 
-
+#Config file from body request
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 #Config Logg
