--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,16 @@
             <version>0.9.1</version>
         </dependency>
 
-
+        <!--Web-socket-->
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <!--Json lib-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
